# yarp-device-openxrheadset

./: .gitignore  CMakeLists.txt  README.md  test_commands.md
.github/workflows/: ci.yml  conda-forge-ci.yml
src/: CMakeLists.txt
src/devices/: CMakeLists.txt
src/devices/openxrheadset/: AdditionalPosesPublisher.cpp  AdditionalPosesPublisher.h  CMakeLists.txt  CustomPosePublisher.cpp  CustomPosePublisher.h  EulerAngles.cpp  EulerAngles.h  ExpressionsManager.cpp  ExpressionsManager.h  EyePort.cpp  EyePort.h  EyesManager.cpp  EyesManager.h  FilteredPosePublisher.cpp  FilteredPosePublisher.h  FramePorts.cpp  FramePorts.h  ImagePortToQuadLayer.h  IndexBuffer.cpp  LabelPortToQuadLayer.cpp  LabelPortToQuadLayer.h  OpenGLConfig.h  OpenXrConfig.h  OpenXrEigenConversions.h  OpenXrHeadset.cpp  OpenXrHeadset.h  OpenXrHeadsetLogComponent.cpp  OpenXrHeadsetLogComponent.h  OpenXrInterface.cpp  OpenXrInterface.h  OpenXrQuadLayer.cpp  OpenXrQuadLayer.h  OpenXrYarpUtilities.cpp  OpenXrYarpUtilities.h  PortToQuadLayer.h  PosePublisher.cpp  PosePublisher.h  PosesManager.cpp  PosesManager.h  Renderer.h  (+11 more)
src/devices/openxrheadset/impl/: OpenGLQuadLayer.cpp  OpenGLQuadLayer.h  OpenXrInterfaceImpl.cpp  OpenXrInterfaceImpl.h  OpenXrQuadLayer.cpp  OpenXrQuadLayer.h
src/devices/openxrheadset/rendering/: FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderFile.h.in  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/devices/openxrheadset/res/shaders/: Basic.shader  QuadLayer.shader
src/devices/openxrheadset/test/: main.cpp
src/devices/openxrheadset/thrifts/: OpenXrHeadsetCommands.thrift
src/utils/: CMakeLists.txt
src/utils/OpenXrFrameViz/: CMakeLists.txt  main.cpp
